--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <P class="intro-p">Welcome to Quick Match. Choose an option below</P>
     </div>
     <div class="buttons">
-        <button onclick="window.location.href='guide.html'">HOW TO PLAY</button>
+        <button onclick="window.location.href='instruction.html'">HOW TO PLAY</button>
         <button onclick="window.location.href='choose.html'">START GAME</button>
     </div>
 </body>
